--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 		<p align="center"><font size="6">Shitong Sun (孙诗童）</font></p>
 		<p align="justify">
 					<br><br>
-	                I am a first year Ph.D. Candidate in Computer Science at 
+	                Jiayi Lin is a Ph.D. Candidate in Computer Science at 
 	                <a href="http://www.qmul.ac.uk/">Queen Mary University of London</a>, 
-	                advised by Prof. <a href = "http://www.eecs.qmul.ac.uk/~sgg/"> Shaogang Gong</a>. 
-	                I received my master's degree from 
-	                <a href='https://www.kuleuven.be/english/'>KU Leuven </a>  majoring in Artificial Intelligence, 
-	                supervised by Prof. <a href = "https://homes.esat.kuleuven.be/~tuytelaa/"> Tinne Tuytelaars </a> and
-			Prof.<a href = "https://antwerp.academia.edu/JoseOramas">Jose Oramas M </a>.
+	                supervised by Prof. <a href = "http://www.eecs.qmul.ac.uk/~sgg/"> Shaogang Gong</a>. 
+	                She received her master's degree at School of Artificial Intelligence,  <a href = "https://english.ucas.ac.cn/"> University of Chinese Academy of Sciences </a>
+			 in 2021, supervised by Prof. <a href = "https://scholar.google.com/citations?hl=zh-CN&user=8kzzUboAAAAJ"> Liang Wang</a>.
+	                
+			In 2018, Prof.<a href = "https://antwerp.academia.edu/JoseOramas">Jose Oramas M </a>.
 	                My bachelor's degree is from 
 	                both <a href='https://www.kuleuven.be/english/'>KU Leuven</a> and <a href='http://en.bjtu.edu.cn/'> Beijing Jiaotong University</a>.<br><br>
 	                
