--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	    <td width="20%">
 	    <br>
 	    <br>
-		<img width="150" src="shitong.jpg" alt="" hspace="10">
+		<img width="150" src="pic_50k.jpg" alt="" hspace="10">
 	</td>
 	</tr> 
 	</table>
