--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
 	                She received her master's degree at School of Artificial Intelligence,  <a href = "https://english.ucas.ac.cn/"> University of Chinese Academy of Sciences </a>
 			 in 2021, supervised by Prof. <a href = "https://scholar.google.com/citations?hl=zh-CN&user=8kzzUboAAAAJ"> Liang Wang</a>.
 	                
-			In 2018, Prof.<a href = "https://antwerp.academia.edu/JoseOramas">Jose Oramas M </a>.
-	                My bachelor's degree is from 
-	                both <a href='https://www.kuleuven.be/english/'>KU Leuven</a> and <a href='http://en.bjtu.edu.cn/'> Beijing Jiaotong University</a>.<br><br>
+			In 2018, she received her bachelor's degree is from 
+	                 <a href="http://www.sysu.edu.cn/2012/en/index.htm">Sun Yat-sen University</a>.
 	                
 			My Ph.D. research lies at the intersection of deep learning and computer vision. I focus on federated learning and computer vision application 
 			at the moment. 
@@ -84,7 +83,7 @@
 	    <td width="20%">
 	    <br>
 	    <br>
-		<img width="150" src="pic_50k.jpg" alt="" hspace="10">
+		<img width="130" src="pic_50k.jpg" alt="" hspace="20">
 	</td>
 	</tr> 
 	</table>
