--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			 in 2021, supervised by Prof. <a href = "https://scholar.google.com/citations?hl=zh-CN&user=8kzzUboAAAAJ"> Liang Wang</a>.
 	                
 			In 2018, she received her bachelor's degree is from 
-	                 <a href="http://www.sysu.edu.cn/2012/en/index.htm">Sun Yat-sen University</a>.
+	                 <a href="http://www.sysu.edu.cn/2012/en/index.htm">Sun Yat-sen University</a>.<br><br>
 	                
 			
 			Research Directions: deep learnin, computer vision (low-level vision). 
