--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 	  	<tr>
 	    <td width="70%" valign="middle">
 		<p align="center"><font size="6">Jiayi Lin</font></p>
+		    <p align="center">Email: <a href="mailto:jiayi.lin@qmul.ac.uk">  jiayi.lin@qmul.ac.uk</a>
 		<p align="justify">
 					<br><br>
 	                Jiayi Lin is a Ph.D. Candidate in Computer Science at 
@@ -67,8 +68,8 @@
 	                 <a href="http://www.sysu.edu.cn/2012/en/index.htm">Sun Yat-sen University</a>.<br><br>
 	                
 			
-			Research Directions: deep learning, computer vision (low-level vision). <br>
-			Email: <a href="mailto:jiayi.lin@qmul.ac.uk">  jiayi.lin@qmul.ac.uk</a>
+			Research Directions: deep learning, computer vision (low-level vision). <br><br>
+			
 			
 		</p>
 
@@ -93,10 +94,10 @@
 
 <!-- Experience --><hr />
 	<table width="100%" align="center" border="0" cellpadding="20">
-	<strong><font size="5" color="#2B547E">Experiences</font></strong>
+	<strong><font size="4" color="#2B547E">Experiences</font></strong>
 	<tr><td>
 	<ul>
-	<li><nobr> Computer Vision algorithm Engineer in CRIPAC, <a href='http://www.ia.cas.cn/'>CASIA</a> in 2018.10-2020.10  </nobr></li>
+	<li><nobr> Intern in <a href='http://www.watrix.ai/'>Watrix</a> focusing on human pose estimation in 2021.06-2021.09  </nobr></li>
 	</ul>
 	</td></tr>  
 	</table> 
