--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	    <td width="70%" valign="middle">
 		<p align="center"><font size="6">Jiayi Lin</font></p>
 		    <p align="center">Email: <a href="mailto:jiayi.lin@qmul.ac.uk">  jiayi.lin@qmul.ac.uk</a>
-		<p align="justify">
+		<p align="justify"><pstyle="line-height:2.4;background-color:pink;">
 					<br><br>
 	                Jiayi Lin is a Ph.D. Candidate in Computer Science at 
 	                <a href="http://www.qmul.ac.uk/">Queen Mary University of London</a>, 
@@ -64,7 +64,7 @@
 	                She received her master's degree at School of Artificial Intelligence,  <a href = "https://english.ucas.ac.cn/"> University of Chinese Academy of Sciences </a>
 			 in 2021, supervised by Prof. <a href = "https://scholar.google.com/citations?hl=zh-CN&user=8kzzUboAAAAJ"> Liang Wang</a>.
 	                
-			In 2018, she received her bachelor's degree from 
+			And in 2018, she received her bachelor's degree from 
 	                 <a href="http://www.sysu.edu.cn/2012/en/index.htm">Sun Yat-sen University</a>.<br><br>
 	                
 			
