--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	    <td width="70%" valign="middle">
 		<p align="center"><font size="6">Jiayi Lin</font></p>
 		    <p align="center">Email: <a href="mailto:jiayi.lin@qmul.ac.uk">  jiayi.lin@qmul.ac.uk</a>
-		<p align="justify"><pstyle="line-height:2.4;background-color:pink;">
+		<p align="justify">
 					<br><br>
 	                Jiayi Lin is a Ph.D. Candidate in Computer Science at 
 	                <a href="http://www.qmul.ac.uk/">Queen Mary University of London</a>, 
