--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
 	</table>
 
 
+<!-- Publication --><hr />
+	<table width="100%" align="center" border="0" cellpadding="20">
+	<strong><font size="4" color="#2B547E">Experiences</font></strong>
+	<tr><td>
+	<ul>
+	FDAN: Flow-guided Deformable Alignment Network for Video Super-Resolution<br>		
+	Jiayi Lin, Yan Huang, Liang Wang<br>
+	arXiv preprint, 2021<br>
+	<a href='https://arxiv.org/pdf/2105.05640.pdf'>[pdf]</a>
+	</ul>
+	</td></tr>  
+	</table> 
+		
 <!-- Experience --><hr />
 	<table width="100%" align="center" border="0" cellpadding="20">
 	<strong><font size="4" color="#2B547E">Experiences</font></strong>
