--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 	</table>
 
 
-<!-- Publication --><hr />
+<!-- Publications --><hr />
 	<table width="100%" align="center" border="0" cellpadding="20">
-	<strong><font size="4" color="#2B547E">Experiences</font></strong>
+	<strong><font size="4" color="#2B547E">Publications</font></strong>
 	<tr><td>
 	<ul>
 	FDAN: Flow-guided Deformable Alignment Network for Video Super-Resolution<br>		
