--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 	</td></tr>  
 	</table> 
 		
-<!-- Experience --><hr />
+<!-- Experience -->
+		<hr>
 	<table width="100%" align="center" border="0" cellpadding="20">
 	<strong><font size="4" color="#2B547E">Experiences</font></strong>
 	<tr><td>
