--- a/index.html
+++ b/index.html
@@ -92,12 +92,13 @@
 	</table>
 
 
-<!-- Publications --><hr />
+<!-- Publications -->
 	<table width="100%" align="center" border="0" cellpadding="20">
-	<strong><font size="4" color="#2B547E">Publications</font></strong>
+	<strong><font size="4" color="#2B547E">Publications</font></strong><hr />
 	<tr><td>
 	<ul>
-	FDAN: Flow-guided Deformable Alignment Network for Video Super-Resolution<br>		
+		<strong><font size="2">FDAN: Flow-guided Deformable Alignment Network for Video Super-Resolution<br></font></strong>
+			
 	Jiayi Lin, Yan Huang, Liang Wang<br>
 	arXiv preprint, 2021<br>
 	<a href='https://arxiv.org/pdf/2105.05640.pdf'>[pdf]</a>
@@ -106,9 +107,8 @@
 	</table> 
 		
 <!-- Experience -->
-		<hr>
 	<table width="100%" align="center" border="0" cellpadding="20">
-	<strong><font size="4" color="#2B547E">Experiences</font></strong>
+	<strong><font size="4" color="#2B547E">Experiences</font></strong><hr />
 	<tr><td>
 	<ul>
 	<li><nobr> Intern in <a href='http://www.watrix.ai/'>Watrix</a> focusing on human pose estimation in 2021.06-2021.09  </nobr></li>
