--- a/index.html
+++ b/index.html
@@ -93,21 +93,16 @@
 
 
 <!-- Publications -->
-	<table width="100%" align="center" border="0" cellpadding="20">
+	<table width="850" align="center" border="0" cellpadding="20">
 	<strong><font size="4" color="#2B547E">Publications</font></strong><hr />
-	<tr><td>
-	<ul>
-		<strong><font size="2">FDAN: Flow-guided Deformable Alignment Network for Video Super-Resolution<br></font></strong>
-			
+	<strong><font size="2">FDAN: Flow-guided Deformable Alignment Network for Video Super-Resolution<br></font></strong>			
 	Jiayi Lin, Yan Huang, Liang Wang<br>
 	arXiv preprint, 2021<br>
 	<a href='https://arxiv.org/pdf/2105.05640.pdf'>[pdf]</a>
-	</ul>
-	</td></tr>  
 	</table> 
 		
 <!-- Experience -->
-	<table width="100%" align="center" border="0" cellpadding="20">
+	<table width="850" align="center" border="0" cellpadding="20">
 	<strong><font size="4" color="#2B547E">Experiences</font></strong><hr />
 	<tr><td>
 	<ul>
