--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	    <td width="70%" valign="middle">
 		<p align="center"><font size="6">Jiayi Lin</font></p>
 		    <p align="center">Email: <a href="mailto:jiayi.lin@qmul.ac.uk">  jiayi.lin@qmul.ac.uk</a>
-		<p align="justify">
+		<p align="justify" style="line-height:2em;">
 					<br><br>
 	                Jiayi Lin is a Ph.D. Candidate in Computer Science at 
 	                <a href="http://www.qmul.ac.uk/">Queen Mary University of London</a>, 
@@ -93,7 +93,7 @@
 
 
 <!-- Publications -->
-	<table width="850" align="center" border="0" cellpadding="20">
+	<table width="850" align="center" border="0" cellpadding="30">
 	<strong><font size="4" color="#2B547E">Publications</font></strong><hr />
 	<tr><td>
 	<strong><font size="2">FDAN: Flow-guided Deformable Alignment Network for Video Super-Resolution<br></font></strong>			
@@ -105,7 +105,7 @@
 	</table> 
 		
 <!-- Experience -->
-	<table width="850" align="center" border="0" cellpadding="20">
+	<table width="850" align="center" border="0" cellpadding="30">
 	<strong><font size="4" color="#2B547E">Experiences</font></strong><hr />
 	<tr><td>
 	<ul>
