--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			 in 2021, supervised by Prof. <a href = "https://scholar.google.com/citations?hl=zh-CN&user=8kzzUboAAAAJ"> Liang Wang</a>.
 	                
 			And in 2018, she received her bachelor's degree from 
-	                 <a href="http://www.sysu.edu.cn/2012/en/index.htm">Sun Yat-sen University</a>.<br><br>
+	                 <a href="http://www.sysu.edu.cn/cn/index.htm">Sun Yat-sen University</a>.<br><br>
 	                
 			
 			Research Directions: deep learning, computer vision (low-level vision). <br><br>
