--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	    <td width="70%" valign="middle">
 		<p align="center"><font size="6">Jiayi Lin</font></p>
 		    <p align="center">Email: <a href="mailto:jiayi.lin@qmul.ac.uk">  jiayi.lin@qmul.ac.uk</a>
-		<p align="justify" style="line-height:2em;">
+		<p align="justify" style="line-height:150%;">
 					<br><br>
 	                Jiayi Lin is a Ph.D. Candidate in Computer Science at 
 	                <a href="http://www.qmul.ac.uk/">Queen Mary University of London</a>, 
@@ -108,8 +108,8 @@
 	<table width="850" align="center" border="0" cellpadding="30">
 	<strong><font size="4" color="#2B547E">Experiences</font></strong><hr />
 	<tr><td>
-	<ul>
-	<li><nobr> Intern in <a href='http://www.watrix.ai/'>Watrix</a> focusing on human pose estimation in 2021.06-2021.09  </nobr></li>
+	<nobr> Intern in <a href='http://www.watrix.ai/'>Watrix</a> focusing on human pose estimation in 2021.06-2021.09  </nobr>
+		
 	</ul>
 	</td></tr>  
 	</table> 
