--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	                 <a href="http://www.sysu.edu.cn/cn/index.htm">Sun Yat-sen University</a>.<br><br>
 	                
 			
-			Research Directions: deep learning, computer vision (low-level vision). <br><br>
+			Research Directions: Deep Learning, Computer Vision (Low-level Vision). <br><br>
 			
 			
 		</p>
@@ -96,7 +96,7 @@
 	<table width="850" align="center" border="0" cellpadding="30">
 	<strong><font size="4" color="#2B547E">Publications</font></strong><hr />
 	<tr><td>
-	<strong><font size="2">FDAN: Flow-guided Deformable Alignment Network for Video Super-Resolution<br></font></strong>			
+	<strong><font size="3">FDAN: Flow-guided Deformable Alignment Network for Video Super-Resolution<br></font></strong>			
 	Jiayi Lin, Yan Huang, Liang Wang<br>
 	arXiv preprint, 2021<br>
 	<a href='https://arxiv.org/pdf/2105.05640.pdf'>[pdf]</a>
@@ -108,7 +108,7 @@
 	<table width="850" align="center" border="0" cellpadding="30">
 	<strong><font size="4" color="#2B547E">Experiences</font></strong><hr />
 	<tr><td>
-	<nobr> Intern in <a href='http://www.watrix.ai/'>Watrix</a> focusing on human pose estimation in 2021.06-2021.09  </nobr>
+	<nobr> Intern in <a href='http://www.watrix.ai/'>Watrix</a> focusing on Human Pose-Estimation in 2021.06-2021.09  </nobr>
 		
 	</ul>
 	</td></tr>  
