--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	<table width="850" align="center" border="0" cellpadding="30">
 	<strong><font size="4" color="#2B547E">Publications</font></strong><hr />
 	<tr><td>
-	<strong><font size="3">FDAN: Flow-guided Deformable Alignment Network for Video Super-Resolution<br></font></strong>			
+	<font size="3">FDAN: Flow-guided Deformable Alignment Network for Video Super-Resolution<br></font>			
 	Jiayi Lin, Yan Huang, Liang Wang<br>
 	arXiv preprint, 2021<br>
 	<a href='https://arxiv.org/pdf/2105.05640.pdf'>[pdf]</a>
